add simple repo setup